--- a/public/global.css
+++ b/public/global.css
@@ -72,12 +72,12 @@ th:not([align]) {
   text-align: left;
 }
 
-/* /* html,
+html,
 body {
   position: relative;
   width: 100%;
   height: 100%;
-} */
+} 
 
 body {
   background: black;
