--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap');
+
 /* minireset.css v0.0.6|MIT License|github.com/jgthms/minireset.css */
 html,
 body,
