--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserratwght@100;300;400;700|Roboto&display=swap');
 
 /* minireset.css v0.0.6|MIT License|github.com/jgthms/minireset.css */
 html,
